--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-
+  <a href="xsteam.html">XSteam</a>
 </body>
 
 </html>
