--- a/steamycalc/details.html
+++ b/steamycalc/details.html
@@ -6,7 +6,13 @@
 		<meta name="description" content="SteamyCalc - Properties of Steam and Water">
 		<meta name="author" content="Kiran Pashikanti <kpatvt@gmail.com>">
 		<title>SteamyCalc - Properties of Steam and Water</title>
-
+		<link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 		<!-- CSS only -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
 	</head>
